          Component's internal router.
          Reported by Emily Toop.
        - Fixed bug with conditional methods in ServerResource when no
          variant is available.
        - ServerServlet life cycle is now correctly propagated to the 
          embedded Restlet component and applications.
          Reported by Rickard Oberg.
    - Enhancements
        - Improved JAXB converted. Contributed by Sanjay Acharya.
        - Upgraded Apache Commons Logging to version 1.1.1.
        - Added library jcip-annotations 1.0.
        - ServerSevlet now automatically supports the declaration of 
          several adapters in the same web.xml. Reworked the Javadocs
          to encourage usage of Servlet init parameters instead of
          context parameters.
        - Refactored connector extensions to move implementation 
          classes in "internal" packages hidden from the Javadocs.
        - Upgraded Jetty to version 7.0.0.
        - The default status page and directory listings are now using
          a sans-serif font.
        - Add support for annotations values separated by a ":" and "|"
          characters. Suggested by Bob Resendes.
        - Added Netty extension containing an HTTP server connector 
          based on this NIO client/server framework developed at JBoss.
          Contributed by Gabriel Ciuloaica.
        - Added support for result set paging in JDBC client connector.
          Contributed by Warren Janssens.
        - Restlet#name property now uses toString() as a default value
          and Filter uses this property in its log traces.
        - Improved Context#getLogger() to cover cases where the class's
          canonical name is empty like for anonymous classes.
        - The FreeMarker TemplateFilter is now more flexible with a
          createDataModel(Request, Response) method that can be 
          overridden and a "dataModel" property with getter and setter.
        - Life cycle events are now propagated in all the Restlet 