@@ -101,6 +101,8 @@ Changes log
         - ServerServlet life cycle is now correctly propagated to the 
           embedded Restlet component and applications.
           Reported by Rickard Oberg.
+        - Fixed issue with OSGi bootstrap that failed to register the
+          converters. Reported by Adam Harrison.
     - Enhancements
         - Improved JAXB converted. Contributed by Sanjay Acharya.
         - Upgraded Apache Commons Logging to version 1.1.1.
